test/types/tuple/heterogeneous/loops/hetTupleOfTupleLoop.good
hetTupleOfTupleLoop.chpl:1: error: Heterogeneous tuples don't support this style of loop yet
