test/types/tuple/heterogeneous/loops/hetTupleOfTupleLoop.chpl
for (x,y) in zip((1.0, 2), (3.4, "hi")) {
  writeln("x is: ", x);
  writeln("y is: ", y);
}
